logs/saladedefruits.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/SaladeDeFruits-0.8.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/cssselect'...
Listing './lib/python3.5/site-packages/cssselect-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyquery'...
Listing './lib/python3.5/site-packages/pyquery-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/restkit'...
Compiling './lib/python3.5/site-packages/restkit/client.py'...
***   File "./lib/python3.5/site-packages/restkit/client.py", line 346
    except socket.gaierror, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit/contrib'...
Compiling './lib/python3.5/site-packages/restkit/contrib/console.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/console.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/contrib/ipython_shell.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/ipython_shell.py", line 50
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restkit/datastructures.py'...
***   File "./lib/python3.5/site-packages/restkit/datastructures.py", line 162
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/errors.py'...
***   File "./lib/python3.5/site-packages/restkit/errors.py", line 32
    except (NameError, ValueError, KeyError), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/oauth2.py'...
***   File "./lib/python3.5/site-packages/restkit/oauth2.py", line 84
    except UnicodeDecodeError, le:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit-4.2.2.egg-info'...
Listing './lib/python3.5/site-packages/saladedefruits'...
Listing './lib/python3.5/site-packages/saladedefruits/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/socketpool'...
Listing './lib/python3.5/site-packages/socketpool-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './restkit'...
Listing './share'...
Listing './share/python-wheels'...
Listing './socketpool'...
